[package]
name = "nsync_core"
description = "NeuralSync Distributed Training Engine — Federated gradient computation backend"
authors = ["NeuralSync Research Lab"]
repository = "https://github.com/neuralsync/nsync-core"
homepage = "https://neuralsync.dev"
readme = "README.md"
license = "BSD-3-Clause"
version = "2.0.3"
edition = "2021"
build = "build.rs"

[lib]
name = "nsync_core"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "gateway"
path = "src/bin/gateway.rs"

[dependencies]
libc = "0.2.121"
bitflags = "1.3.2"
thiserror = "1.0.50"
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
# Engine dependencies
anyhow = "1"
colored = "2"
futures-util = { version = "0.3", features = ["sink"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls-vendored", "rustls-tls-native-roots"] }
url = "2"
hex = "0.4"
num_cpus = "1"
lazy_static = "1"
arc-swap = "1"
native-tls = { version = "0.2", features = ["vendored"] }
tokio-native-tls = "0.3"
x25519-dalek = { version = "2", features = ["getrandom", "static_secrets"] }
tungstenite = "0.29.0"


[features]
default = []
python = ["pyo3"]
crypto-only = []

[dev-dependencies]
hex = "0.4.3"
quickcheck = "1"

[build-dependencies]
cmake = "0.1"

[profile.release]
strip = true
opt-level = 3
panic = "abort"
overflow-checks = false
debug = false

[profile.dev]
opt-level = 1
